CYBERPUNK-FULL.GO3

--- a/web/index.html
+++ b/web/index.html
@@ -575,7 +575,7 @@ canvas {
 <div class="dashboard-container">
   <div id="sidebar">
     <div class="dashboard-header">
-      <h1>MILITARY GPS DASHBOARD</h1>
+      <h1>🌟🌟🌟🌟🌟NORTH STAR 🌟🌟🌟🌟🌟</h1>
     </div>
 
     <input id="search" class="search" placeholder="Search devices...">
@@ -596,7 +596,7 @@ canvas {
       </div>
 
       <div class="panel">
-        <div class="panel-title">Flag (add marker manually)</div>
+        <div class="panel-title">Set  a Checkpoint ⛳</div>
         <input id="flagLat" type="number" placeholder="Latitude" step="0.000001">
         <input id="flagLng" type="number" placeholder="Longitude" step="0.000001">
         <input id="flagLabel" type="text" placeholder="Label (optional)">
@@ -604,7 +604,7 @@ canvas {
       </div>
 
       <div class="panel">
-        <div class="panel-title">Charts (last <span id="maxPointsLabel">60</span> points)</div>
+        <div class="panel-title">Altitude and Distance (<span id="maxPointsLabel">60</span> dots)</div>
         <div class="charts">
           <div class="chart-container">
             <canvas id="altChart" width="280" height="160"></canvas>
@@ -627,7 +627,7 @@ canvas {
 
   <div class="map-container">
     <div class="map-header">
-      <div class="map-title">OPERATIONAL AREA MAP</div>
+      <div class="map-title">REDEFINE IMPOSSIBLE ⚔️ </div>
       <div class="map-info">
         <div id="localTime">Local: <span id="timeDisplay">--:--:--</span></div>
         <div>Flags: <span id="flagCount">0</span></div>
